--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     <div class="dashboard-container header-container" id="headerSection">
       <div>
         <h1>Cartão Fidelidade</h1>
-        <p id="welcome-msg">Olá, <span id="user-name"></span>!</p>
+        <p id="welcome-msg">Olá Seja bem bem vindo de volta, <span id="username"></span>!</p>
       </div>
       <img id="logo" src="/logo/LogoGuerra.png" alt="Logo do estabelecimento" />
     </div>
@@ -50,7 +50,7 @@
       <button class="active" data-section="tab-clients">Cadastrar Cliente</button>
       <button data-section="tab-table">Tabela Clientes</button>
       <button data-section="tab-notify">Notificações</button>
-      <button data-section="tab-qr">Consultar</button>
+      <button data-section="tab-qr">Consultar pontos</button>
     </nav>
 
     <!-- ABA 1: CADASTRAR CLIENTE -->
