ajuste na mensagem de boas vindas

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     <div class="dashboard-container header-container" id="headerSection">
       <div>
         <h1>Cartão Fidelidade</h1>
-        <p id="welcome-msg">Olá Seja bem bem vindo de volta, <span id="username"></span>!</p>
+        <p id="welcome-msg">Olá Seja bem bem vindo de volta, <span id="user-name"></span>!</p>
       </div>
       <img id="logo" src="/logo/LogoGuerra.png" alt="Logo do estabelecimento" />
     </div>
