ajuste na landing

--- a/public/landing.html
+++ b/public/landing.html
@@ -2,9 +2,34 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Meta Pixel Code (sempre primeiro dentro do head) -->
+  <!-- SEO Meta Tags -->
+  <title>Cartão Fidelidade Online | BityLab</title>
+  <meta name="description" content="Simplifique seu programa de fidelidade com nosso app: cadastro em 5 minutos, pontos via QR Code e vouchers automáticos pelo WhatsApp.">
+  <meta name="keywords" content="fidelidade, cartão digital, pontos, voucher, WhatsApp">
+
+  <!-- Open Graph / Social Media -->
+  <meta property="og:title" content="Cartão Fidelidade Online | BityLab">
+  <meta property="og:description" content="Experimente grátis por 7 dias. Cadastre clientes, acompanhe pontos e envie vouchers automaticamente.">
+  <meta property="og:image" content="https://seusite.com/images/og-image.png">
+  <meta property="og:url" content="https://seusite.com">
+  <meta property="og:type" content="website">
+
+  <!-- JSON-LD Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Cartão Fidelidade Online BityLab",
+    "operatingSystem": "Web",
+    "applicationCategory": "BusinessApplication",
+    "offers": { "@type": "Offer", "price": "15.00", "priceCurrency": "BRL", "url": "https://seusite.com" }
+  }
+  </script>
+
+  <!-- Meta Pixel Code -->
   <script>
     !function(f,b,e,v,n,t,s)
     {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -18,149 +43,110 @@
     fbq('track', 'PageView');
   </script>
   <noscript>
-    <img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=1088314229773836&ev=PageView&noscript=1"/>
+    <img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=1088314229773836&ev=PageView&noscript=1"/>
   </noscript>
   <!-- End Meta Pixel Code -->
 
   <link rel="shortcut icon" href="logo/favicon.ico" type="image/x-icon">
-  <title>Cartão Fidelidade Online BityLab</title>
   <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, sans-serif;
-      background-color: #1e1e1e;
-      color: #ffffff;
-      line-height: 1.6;
-    }
-    .container {
-      max-width: 960px;
-      margin: 0 auto;
-      padding: 2rem;
-    }
-    header {
-      text-align: center;
-      padding: 2rem 0;
-    }
-    header img {
-      width: 120px;
-      height: auto;
-    }
-    header h1 {
-      margin: 1rem 0 0.5rem;
-      font-size: 2.5rem;
-      color: #e72eff;
-    }
-    header p {
-      font-size: 1.25rem;
-    }
-    .features {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 1.5rem;
-      margin: 3rem 0;
-    }
-    .feature {
-      background-color: #2a2a2a;
-      padding: 1.5rem;
-      border-radius: 8px;
-      text-align: center;
-    }
-    .feature img {
-      max-width: 100%;
-      border-radius: 4px;
-      margin-bottom: 1rem;
-    }
-    .feature h3 {
-      margin-bottom: 0.5rem;
-      color: #e72eff;
-    }
-    .cta {
-      text-align: center;
-      margin: 4rem 0;
-    }
-    .cta a {
-      display: inline-block;
-      background-color: #e72eff;
-      color: #ffffff;
-      padding: 1rem 2rem;
-      border-radius: 8px;
-      font-size: 1.25rem;
-      text-decoration: none;
-      transition: background 0.3s;
-    }
-    .cta a:hover {
-      background-color: #d1007a;
-    }
-    footer {
-      text-align: center;
-      padding: 1.5rem 0;
-      font-size: 0.875rem;
-      color: #888;
-    }
+    /* Global Styles */
+    body { margin:0; font-family: 'Segoe UI', Tahoma, sans-serif; background:#1e1e1e; color:#fff; }
+    a { text-decoration:none; }
+    .container { max-width:960px; margin:0 auto; padding:2rem; }
+    section + section { margin-top:4rem; }
+    img, video { max-width:100%; border-radius:8px; }
+    .btn { display:inline-block; background:#e72eff; color:#fff; padding:1rem 2rem; border-radius:8px; font-size:1.125rem; transition:background .3s; }
+    .btn:hover { background:#d1007a; }
+    /* Hero */
+    .hero { text-align:center; padding:4rem 1rem; }
+    .hero h1 { font-size:3rem; margin-bottom:.5rem; }
+    .hero p { font-size:1.25rem; margin-bottom:1.5rem; }
+    /* Features Icons */
+    .features { display:grid; grid-template-columns:repeat(auto-fit, minmax(200px,1fr)); gap:1.5rem; }
+    .feature-icon { display:flex; align-items:center; }
+    .feature-icon img { width:48px; margin-right:.75rem; }
+    /* Video demos */
+    .demos { display:flex; flex-direction:column; gap:2rem; }
+    /* Testimonials */
+    .testimonials { background:#2a2a2a; padding:2rem; border-radius:8px; }
+    .testimonial { margin-bottom:1.5rem; }
+    .testimonial p { font-style:italic; }
+    .testimonial h4 { margin-top:.5rem; color:#e72eff; }
+    /* FAQ */
+    .faq dt { font-weight:bold; margin-top:1rem; }
   </style>
 </head>
 <body>
   <div class="container">
-    <header>
-      <img src="logo/Logo.png" alt="Logo BityLab">
-      <h1>Cartão Fidelidade Online</h1>
-      <p>Simplifique seu programa de fidelidade com BityLab.</p>
-    </header>
+    <!-- Hero Section -->
+    <section class="hero">
+      <img src="logo/Logo.png" alt="Logo BityLab" width="120" loading="lazy">
+      <h1>Cartão Fidelidade Digital</h1>
+      <p>Cadastre em 5 minutos, acompanhe pontos via QR Code e envie vouchers automáticos pelo WhatsApp.</p>
+      <a href="https://wa.me/qr/F2Z744R5KWEPB1" class="btn" onclick="fbq('track','Lead')">Teste Grátis por 7 Dias</a>
+    </section>
 
+    <!-- Icon Features -->
     <section class="features">
-      <div class="feature">
-        <img src="landingPage/addCliente.png" alt="Adicionar Novo Cliente">
-        <h3>Adicione Clientes</h3>
-        <p>Cadastre novos clientes em segundos e comece a acumular pontos.</p>
+      <div class="feature-icon">
+        <img src="icons/user-plus.svg" alt="Cadastro Rápido">
+        <div><h3>Cadastro Rápido</h3><p>Em segundos com nome e telefone.</p></div>
       </div>
-      <div class="feature">
-        <img src="landingPage/buscarCliente.png" alt="Salvar e Buscar Clientes">
-        <h3>Gerencie Informações</h3>
-        <p>Salve, busque e edite detalhes dos clientes facilmente.</p>
+      <div class="feature-icon">
+        <img src="icons/qr-code.svg" alt="Pontos por QR Code">
+        <div><h3>Pontos por QR Code</h3><p>Atribua e consulte em um click.</p></div>
       </div>
-      <div class="feature">
-        <img src="landingPage/consultarPontos.png" alt="Consulta de Pontos via QR Code">
-        <h3>Consulta de Pontos</h3>
-        <p>Mostre o QR Code ou envie o link para seus clientes conferirem seus pontos instantaneamente.</p>
+      <div class="feature-icon">
+        <img src="icons/whatsapp.svg" alt="Envio pelo WhatsApp">
+        <div><h3>Envio Automático</h3><p>Voucher no WhatsApp sem custo extra.</p></div>
       </div>
-      <div class="feature">
-        <img src="landingPage/notificação.png" alt="Notificações">
-        <h3>Notificações</h3>
-        <p>Envie o voucher para seus clientes com 10 pontos.</p>
-      </div>
-
-      <div class="feature">
-        <h3>Envio Automático de Vouchers</h3>
-        <p>Ao atingir 10 pontos, o cliente recebe automaticamente seu voucher diretamente no WhatsApp — sem custo extra.</p>
-      </div>
-      <div class="feature">
-        <h3>Layouts Padrão ou Personalizado</h3>
-        <p>Escolha nosso layout clássico ou, por apenas R$ 50, envie seu logo e deixe o cartão com a cara da sua marca.</p>
-      </div>
-      <div class="feature">
-        <h3>Segurança em Nuvem</h3>
-        <p>Dados criptografados, backup automático e alta disponibilidade para você não se preocupar com nada.</p>
-      </div>
-      <div class="feature">
-        <h3>Suporte Dedicado</h3>
-        <p>Nossa equipe está pronta para ajudar na configuração, personalização e tirar qualquer dúvida — tudo em português.</p>
+      <div class="feature-icon">
+        <img src="icons/shield-lock.svg" alt="Segurança em Nuvem">
+        <div><h3>Segurança</h3><p>Dados criptografados e backup automático.</p></div>
       </div>
     </section>
 
-    <section class="cta">
-      <p style="font-size:1.125rem; margin-bottom:1rem;">Teste 7 dias grátis. Após, R$ 15/mês.</p>
-      <a
-        href="https://wa.me/qr/F2Z744R5KWEPB1"
-        onclick="fbq('track','Lead');"
-        target="_blank"
-        rel="noopener"
-      >
-        Entre em contato para adquirir o aplicativo
-      </a>
+    <!-- Video Demonstrations -->
+    <section>
+      <h2>Demonstrações</h2>
+      <div class="demos">
+        <video controls poster="thumbnails/cadastro.png" loading="lazy"><source src="videos/cadastro.mp4" type="video/mp4"></video>
+        <video controls poster="thumbnails/qr.png" loading="lazy"><source src="videos/qr.mp4" type="video/mp4"></video>
+        <video controls poster="thumbnails/voucher.png" loading="lazy"><source src="videos/voucher.mp4" type="video/mp4"></video>
+      </div>
     </section>
 
-    <footer>
+    <!-- Testimonials -->
+    <section class="testimonials">
+      <h2>O que dizem nossos clientes</h2>
+      <div class="testimonial">
+        <p>"Aumento de 30% nas vendas em 2 meses! Super fácil de usar."</p>
+        <h4>— Maria Oliveira, Loja de Bijuterias</h4>
+      </div>
+      <div class="testimonial">
+        <p>"Automatizei o envio de vouchers e ganhei tempo para focar no atendimento."</p>
+        <h4>— João Santos, Café Central</h4>
+      </div>
+    </section>
+
+    <!-- FAQ -->
+    <section>
+      <h2>Perguntas Frequentes</h2>
+      <dl class="faq">
+        <dt>Preciso ter loja física?</dt>
+        <dd>Não, funciona 100% online e pode ser acessado de qualquer dispositivo.</dd>
+        <dt>Como é feita a cobrança?</dt>
+        <dd>R$15/mês após 7 dias de teste sem compromisso.</dd>
+      </dl>
+    </section>
+
+    <!-- Footer CTA -->
+    <section class="cta" style="text-align:center; margin:4rem 0;">
+      <p style="font-size:1rem; margin-bottom:1rem;">Pronto para fidelizar seus clientes?</p>
+      <a href="https://wa.me/qr/F2Z744R5KWEPB1" class="btn" onclick="fbq('track','Lead')">Comece Agora</a>
+    </section>
+
+    <footer style="text-align:center; font-size:.875rem; color:#888;">
       <p>&copy; 2024 BityLab. Todos os direitos reservados.</p>
     </footer>
   </div>
