--- a/public/landing.html
+++ b/public/landing.html
@@ -153,17 +153,21 @@
     </section>
 
     <!-- Testimonials -->
-    <section class="testimonials">
-      <h2>O que dizem nossos clientes</h2>
-      <div class="testimonial">
-        <p>"Aumento de 30% nas vendas em 2 meses! Super fácil de usar."</p>
-        <h4>— Diego Guerra - estética animal</h4>
-      </div>
-      <div class="testimonial">
-        <p>"Automatizei o envio de vouchers e ganhei tempo para focar no atendimento."</p>
-        <h4>— João Santos, Café Central</h4>
-      </div>
-    </section>
+    <div class="testimonial">
+      <p>"Aumento de 30% nas vendas em 2 meses! Super fácil de usar o app, tanto no computador quanto no celular. Adeus cartão impresso."</p>
+      <h4>— Diego Guerra, Estética Automotiva</h4>
+    </div>
+
+    <div class="testimonial">
+      <p>"Automatizei o envio de vouchers e ganhei tempo para focar no atendimento dos meus clientes na Artti Pet. Contratei o layout personalizado e ficou a cara da minha empresa. Parabéns à equipe da BityLab!"</p>
+      <h4>— Pedro Santos, Artti Pet (Estética Animal)</h4>
+    </div>
+
+    <div class="testimonial">
+      <p>"Desde que comecei a oferecer pontos de fidelidade com o cartão online BityLab para meus clientes, tive um aumento de 25% no número de passageiros que retornaram para solicitar meus serviços de Uber."</p>
+      <h4>— Xandy Magalhães, Motorista Particular</h4>
+    </div>
+  </section>
 
     <section class="cta">
       <p style="font-size:1.125rem; margin-bottom:1rem;">Teste 7 dias grátis. Após, R$ 15/mês.</p>
