--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,8 @@
       <button data-section="tab-table">Tabela Clientes</button>
       <button data-section="tab-notify">Notificações</button>
       <button data-section="tab-qr">Consultar pontos</button>
+      <button data-section="tab-add-points">Adicionar Pontos</button>
+
     </nav>
 
     <!-- ABA 1: CADASTRAR CLIENTE -->
@@ -68,23 +70,25 @@
         <button id="saveClientBtn">Salvar Cliente</button>
       </div>
 
-      <div class="dashboard-container" id="searchPointsSection">
-        <h3>Buscar Cliente</h3>
-        <label for="searchClient">Digite o nome do cliente:</label>
-        <input type="text" id="searchClient" placeholder="Buscar Cliente" />
-        <button id="searchBtn">Buscar</button>
-
-        <h3>Adicionar Pontos ao Cliente</h3>
-        <label for="clientSelect">Selecione o Cliente:</label>
-        <select id="clientSelect">
-          <option value="">Selecione o cliente</option>
-        </select>
-        <label for="points">Pontos:</label>
-        <input type="number" id="points" min="1" max="10" />
-        <button id="addPointsBtn">Adicionar Pontos</button>
-      </div>
+      
     </section>
+    <!-- ABA 5: ADICIONAR PONTOS -->
+      <section id="tab-add-points" class="tab-content" style="display:none;">
+        <div class="dashboard-container">
+          <h3>Adicionar Pontos</h3>
+          <input
+            type="text"
+            id="searchPointsInput"
+            placeholder="Pesquisar cliente..."
+            style="width:100%; padding:0.75rem; margin-bottom:1rem;"
+          />
+          <div id="addPointsCardContainer">
+            <!-- JS irá injetar aqui o card do cliente -->
+          </div>
+        </div>
+      </section>
 
+  
     <!-- ABA 2: TABELA CLIENTES -->
     <section id="tab-table" class="tab-content" style="display:none;">
       <div class="dashboard-container">
