--- a/public/index.html
+++ b/public/index.html
@@ -51,10 +51,10 @@
     <!-- MENU DE ABAS -->
     <nav class="tab-menu">
       <button class="active" data-section="tab-clients">Cadastrar Cliente</button>
+      <button data-section="tab-add-points">Adicionar Pontos</button>
       <button data-section="tab-table">Tabela Clientes</button>
       <button data-section="tab-notify">Notificações</button>
       <button data-section="tab-qr">Consultar pontos</button>
-      <button data-section="tab-add-points">Adicionar Pontos</button>
     </nav>
 
     <!-- ABA 1: CADASTRAR CLIENTE -->
@@ -73,7 +73,17 @@
       </div>
     </section>
 
-    <!-- ABA 2: TABELA CLIENTES -->
+    <!-- ABA 2: ADICIONAR PONTOS -->
+    <section id="tab-add-points" class="tab-content" style="display:none;">
+      <div class="dashboard-container">
+        <h3>Adicionar Pontos</h3>
+        <input type="text" id="searchPointsInput" placeholder="🔎 Pesquisar cliente..." />
+        <button id="searchPointsBtn">Buscar</button>
+        <div id="addPointsCardContainer"></div>
+      </div>
+    </section>
+
+    <!-- ABA 3: TABELA CLIENTES -->
     <section id="tab-table" class="tab-content" style="display:none;">
       <div class="dashboard-container">
         <input
@@ -95,7 +105,7 @@
       <div id="detailBackdrop"></div>
     </section>
 
-    <!-- ABA 3: NOTIFICAÇÕES -->
+    <!-- ABA 4: NOTIFICAÇÕES -->
     <section id="tab-notify" class="tab-content" style="display:none;">
       <div class="center-content">
         <div class="dashboard-container">
@@ -105,7 +115,7 @@
       </div>
     </section>
 
-    <!-- ABA 4: CONSULTAR PONTOS -->
+    <!-- ABA 5: CONSULTAR PONTOS -->
     <section id="tab-qr" class="tab-content" style="display:none;">
       <div class="center-content">
         <div class="dashboard-container">
@@ -116,19 +126,6 @@
             <a id="pointsLink" href="#" target="_blank">Consultar meus pontos</a>
           </p>
         </div>
-      </div>
-    </section>
-
-    <!-- ABA 5: ADICIONAR PONTOS -->
-    <section id="tab-add-points" class="tab-content" style="display:none;">
-      <div class="dashboard-container">
-        <h3>Adicionar Pontos</h3>
-        <input
-          type="text"
-          id="searchPointsInput"
-          placeholder="🔎 Pesquisar cliente..."
-        />
-        <div id="addPointsCardContainer"></div>
       </div>
     </section>
 
