--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <link rel="apple-touch-icon" href="/logo/icon.png" sizes="180x180" />
   <link rel="shortcut icon" href="/logo/icon.png" />
 
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="style.css" />
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&amp;family=Oxanium:wght@200..800&amp;display=swap"
     rel="stylesheet"
